@@ -222,6 +222,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       include undef entries.
     - x2goserver/lib/x2goupdateoptionsstring: switch to "X2Go/NX Agent" term
       and make it bold to denote something special.
+    - X2Go/Server/Agent/NX/Options.pm: add new function compact_intermediate,
+      used to remove duplicated and empty elements.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
